feat: add db schema and update models